refactor: improve sidebar navigation and mobile responsivenes. feat: Created add aplication form.

--- a/app/(dashboard)/applications/data/applications.json
+++ b/app/(dashboard)/applications/data/applications.json
@@ -13,7 +13,7 @@
     "id": "JOB-1002",
     "companyName": "Microsoft",
     "position": "Software Engineer",
-    "status": "interview stage",
+    "status": "interview",
     "applicationDate": "2024-02-12",
     "lastUpdate": "2024-02-14",
     "interviewDate": "2024-02-20",
@@ -43,7 +43,7 @@
     "id": "JOB-1005",
     "companyName": "Tesla",
     "position": "Software Engineer",
-    "status": "offer received",
+    "status": "offer",
     "applicationDate": "2024-02-18",
     "lastUpdate": "2024-02-25",
     "interviewDate": null,
@@ -63,7 +63,7 @@
     "id": "JOB-1007",
     "companyName": "Netflix",
     "position": "UI/UX Designer",
-    "status": "interview stage",
+    "status": "interview",
     "applicationDate": "2024-02-20",
     "lastUpdate": "2024-02-22",
     "interviewDate": "2024-02-28",
