--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
+    "motion": "^12.7.3",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
