--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.475.0",
+    "lucide-react": "^0.507.0",
     "motion": "^12.7.3",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
@@ -47,6 +47,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
