--- a/carrio-chrome-extension/manifest.json
+++ b/carrio-chrome-extension/manifest.json
@@ -26,7 +26,7 @@
         "https://www.linkedin.com/jobs/*",
         "https://linkedin.com/jobs/*"
       ],
-      "js": ["debug-helper.js", "content.js"],
+      "js": ["content.js"],
       "run_at": "document_end"
     },
     {
